[FIX] : mypage overflow

--- a/front-end/src/components/mypage/MakeAI.module.css
+++ b/front-end/src/components/mypage/MakeAI.module.css
@@ -61,3 +61,20 @@
   max-width: 100vw;
   padding: 0 10px;
 }
+
+.ant-progress .ant-progress-status-active .ant-progress-line .css-dev-only-do-not-override-fpg3f5 {
+  margin-inline-end: 0;
+  margin-right: 0;
+  margin-left: 0;
+  max-width: 100vw;
+}
+
+:where(.css-dev-only-do-not-override-fpg3f5).ant-progress-line {
+  position: relative;
+  font-size: 14px;
+  margin-inline-end: 0;
+  margin-bottom: 8px;
+  margin-right: 0;
+  margin-left: 0;
+  max-width: 100vw;
+}
